@@ -1,3 +1,10 @@
+2000-09-05  Eric Melski  <ericm@ajubasolutions.com>
+
+	* label.tcl: Corrected bindtags for BWidgets Label components:
+	primary component widget now includes the megawidget pathname in
+	its bindtags list, so that bindings on the megawidget pathname are
+	applied properly.
+
 2000-08-10  Eric Melski  <ericm@ajubasolutions.com>
 
 	* widget.tcl: Corrected a problem caused by the destruction of the
